--- a/JAVA/Index.html
+++ b/JAVA/Index.html
@@ -1,50 +1,22 @@
-<!doctype html> <!--  index.html  -->
-<html>
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-<meta name="viewport" content="width=device-width, initial-scale=1"/>
-<style>
- body {font-family: Verdana, sans-serif; font-size:0.8em;}
- header, nav, section, article, footer
- {border:1px solid gray; margin:5px; padding:8px;}
- section#displayArea{ height:210px;}
- nav ul {margin:0; padding:0;}
- nav ul li {display:inline; margin:5px; }
- a {text-decoration:none;}
- #id_form{width:100px; height:14px; color:red;}
-</style>
-<script type="text/javascript">
- function fnTest(){
- document.write("자바스크립트환영!")
- alert("자바 스크립트 환영!!");
- }
-</script>
-<title>자바 스크립트 실습</title>
-</head>
-<body>
- <div id="se-index">
-        <div class="menu">
-        	<div class="left">
-        	<ul>
-            	<li><a href="#">Menu1</a></li>
-            	<li><a href="#">Menu2</a></li>
-            	<li><a href="#">Menu3</a></li>
-            	<li><a href="#">Menu4</a></li>
-            	<li><a href="#">Menu5</a></li>
-            </ul>
-            </div>  
- <header>
-  <h2>자바스크립트를 환영합니다</h2></header>
- <nav>
+<!doctype  html>  <!--  index.html -->             
+<html><head> 
+  <meta charset="utf-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <style>
+  a:link {color:blue; text-decoration:none;} a:visited { color:purple; text-decoration:none;}
+  a:hover { text-decoration:underline;} a:active {color:red; text-decoration:none;}
+  </style>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <title>홍길동 자바 홈페이지</title></head>
+<body><header></header>
+<section>
+  <p>(설명문)아래 코드를 이용하여 주별 숙제를 정리할 것</p>
   <ul>
-    <li><a href="http://www.dju.ac.kr">대학</a></li>
-    <li><a href="http://hive.dju.ac.kr">실습서버</a></li>
-   </ul></nav>
-  <section>
-    <h2>자바스크립트 실행합니다</h2>
-     <script>fnTest();</script>
-  </section>
-  <footer>
-   <p>&copy; 20XXMade by Korea. All rights reserved. </p></footer>
-  </body>
-  </html>
+    <li id="week01">1주
+    <ol type ="1">
+      <li><a href="https://xxxxxxx.github.io/1/20xx01x1.html"  target="_blank">변학도숙제</a></li>
+      <li><a href="https://xxxxxxx.github.io/1/20xx01x2.html"  target="_blank">도깨비숙제</a></li>
+    </ol>
+  </ul>
+</section>
+</body>
+</html>
