--- a/JAVA/Index1.html
+++ b/JAVA/Index1.html
@@ -38,7 +38,7 @@
   </picture>
   <p>결과화면</p>
   <picture>
-    <source media="(min-width: 768px)" srcset="./20xx01x1r1_big.png"/>
+    <source media="(min-width: 768px)" srcset="./20xx01x1r1_big.1png"/>
     <img src="./20xx01x1r1_small.png" alt="결과화면" style="width:auto;"/>
   </picture>
 </section></body></html>
