--- a/JAVA/Week1/Index.html
+++ b/JAVA/Week1/Index.html
@@ -1,1 +1,13 @@
 
+<!doctype html> <!--abc.html-->
+<html>
+<head>
+ <meta charset="utf-8"/>
+ <meta name="veiwport" content="width=device-width, initial-scale=1"/>
+ <title>week01</title>
+</head>
+<body>
+ <h3>결과화면</h3>
+ <img src="1.PNG">
+</body>
+</html>
