--- a/JAVA/javaindex.html
+++ b/JAVA/javaindex.html
@@ -31,12 +31,12 @@ a:active {
 <section> <!-- main -->
    <section> <h3 id="week_1"> <a href="#main"> 1주 1회차</a></h3>
       <ul style="list-style-type:circle">
-         <li><a href="jihunyu524.github.io/JAVA/Week1/Index.html">1주차 과제</a></li>
+         <li><a href="https://jihunyu524.github.io/JAVA/Week1/Index.html">1주차 과제</a></li>
       </ul>
    </section>
     <section> <h3 id="week_2"> <a href="#main"> 1주 2회차</a></h3>
       <ul style="list-style-type:circle">
-         <li><a href="jihunyu524.github.io/JAVA/Week1/abc.html">1주차 실습 </a></li>
+         <li><a href="https://jihunyu524.github.io/JAVA/Week1/abc.html">1주차 실습 </a></li>
       </ul>
    </section> 
 
