--- a/JAVA/Week1/abc.html
+++ b/JAVA/Week1/abc.html
@@ -7,8 +7,8 @@
 </head>
 <body>
  <h3>실습1</h3>
- <img src="2.PNG">
+ <img src="2.png">
  <h3>실습2</h3>
- <img src="3.PNG">
+ <img src="3.png">
 </body>
 </html>
