--- a/JAVA/week4/Index.html
+++ b/JAVA/week4/Index.html
@@ -6,8 +6,8 @@
 <body>
   <h2> 유지훈 </h2><br/>
   <br/> 소스코드<br/>
-  <img src="1_2-1.png" width=70% border=0 usemap="#area">
+  <img src="1.소스.png" width=70% border=0 usemap="#area">
  <br/><br/> 결과화면<br/>
-  <img src="1_2-2.png" width=80% border=0 usemap="#area">
+  <img src="1.결과.png" width=80% border=0 usemap="#area">
 
 </body></html>
