--- a/JAVA/week4/week4-1.html
+++ b/JAVA/week4/week4-1.html
@@ -1,4 +1,4 @@
-<!doctype html><!-- week4.html -->
+<!doctype html><!-- week4-1.html -->
 <html><head><meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title> 유지훈 과제</title>
