--- a/JAVA/week4/week4-9.html
+++ b/JAVA/week4/week4-9.html
@@ -6,9 +6,9 @@
 <body>
   <h2> 유지훈 </h2><br/>
   <br/> 소스코드<br/>
-  <img src="3-1.소스.png" width=70% border=0 usemap="#area">
+  <img src="3-1.결과.png" width=70% border=0 usemap="#area">
  <br/><br/> 결과화면<br/>
-  <img src="3-1.결과.png" width=80% border=0 usemap="#area">
+  <img src="3-1..png" width=80% border=0 usemap="#area">
 
 </body></html>
 Footer
