--- a/JAVA/week3/week3-2.html
+++ b/JAVA/week3/week3-2.html
@@ -8,6 +8,6 @@
   <br/> 소스코드<br/>
   <img src="2-4.png" width=70% border=0 usemap="#area">
  <br/><br/> 결과화면<br/>
-  <img src="2-4.결과.png" width=80% border=0 usemap="#area">
+  <img src="2-4.png" width=80% border=0 usemap="#area">
 
 </body></html>
