--- a/JAVA/week4/week4-9.html
+++ b/JAVA/week4/week4-9.html
@@ -8,7 +8,7 @@
   <br/> 소스코드<br/>
   <img src="3-1.결과.png" width=70% border=0 usemap="#area">
  <br/><br/> 결과화면<br/>
-  <img src="3-1..png" width=80% border=0 usemap="#area">
+  <img src="3-1.소스.png" width=80% border=0 usemap="#area">
 
 </body></html>
 Footer
