--- a/JAVA/week6/week6-9.html
+++ b/JAVA/week6/week6-9.html
@@ -1,4 +1,4 @@
-<!doctype html><!-- wee6-9.html -->
+<!doctype html><!-- week6-9.html -->
 <html><head><meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title> 유지훈 실습</title>
