--- a/JAVA/index.html
+++ b/JAVA/index.html
@@ -1,85 +1,71 @@
-<!doctype html><!--index.html-->
+<!doctype html> <!--index.html -->
 <html><head>
- <meta charset="uft-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
+ <meta charset="uft-8"/>
+ <meta name="viewport" content=width=device-width,initial-sacle=1"/>
+ <title>개인 과제 리스트</title>
  <style>
- a:link {color:blue; text-decoration:none;} a:visited {color:purple; text-decoration:none;}
- a:hover {text-decoration:underline;} a:active {color:red; text-decoration:none; }
- </style>
- <script src="https://ajax.googleapis.com/ajax/libs/jquery.min.js"></script>
- <title>유지훈 자바 홈페이지</title></head>
-<body><header></header>
-<section>
- 
- <ul>
-  <li id="weeek02">2주
-  <ol type="1">
-   <li><a href="https://gubo-00-99.github.io/java/200910_4.html" target="_blank">변학도숙제</a></li>
-  </ol>
-  <li id="weeek03">3주
-  <ol type="1">
-   <li><a href="https://gubo-00-99.github.io/java/200916_2.html" target="_blank">변수숙제</a></li>
-   <li><a href="https://gubo-00-99.github.io/java/200917_3_1.html" target="_blank">예제Ex1_2</a></li>
-   <li><a href="https://gubo-00-99.github.io/java/200917_3_2.html" target="_blank">예제Ex1_3</a></li>
-   <li><a href="https://gubo-00-99.github.io/java/200917_3_3.html" target="_blank">예제Ex1_4</a></li>
-   <li><a href="https://gubo-00-99.github.io/java/200917_4.html" target="_blank">원둘레 원넓이_변수숙제</a></li>
-  </ol>
-  <li id="weeek04">4주
-  <ol type="1">
-   <li><a href="https://gubo-00-99.github.io/java/200923_1.html" target="_blank">초 분 계산</a></li>
-   <li><a href="https://gubo-00-99.github.io/java/200923_1_2.html" target="_blank">예제Ex2_1</a></li>
-   <li><a href="https://gubo-00-99.github.io/java/200923_2.html" target="_blank">예제Ex2_2</a></li>
-   <li><a href="https://gubo-00-99.github.io/java/200924_3_1.html" target="_blank">증감 연산자</a></li>
-   <li><a href="https://gubo-00-99.github.io/java/200924_3_2.html" target="_blank">나머지 구하기(%사용)</a></li>
-   <li><a href="https://gubo-00-99.github.io/java/200924_3_3.html" target="_blank">불린 변수 사용</a></li>
-   <li><a href="https://gubo-00-99.github.io/java/200924_4_1.html" target="_blank">비교 연산자</a></li>
-   <li><a href="https://gubo-00-99.github.io/java/200924_4_2.html" target="_blank">삼항 연산자</a></li>
-   <li><a href="https://gubo-00-99.github.io/java/200924_4_3.html" target="_blank">Math.pow()</a></li>
-   <li><a href="https://gubo-00-99.github.io/java/200924_4_4.html" target="_blank">논리 결과값</a></li>
-  </ol>
-  <li id="weeek05">5주
-  <ol type="1">
-   <li><a href="https://gubo-00-99.github.io/java/201007_1_1.html" target="_blank">예제Ex3_1</a></li>
-   <li><a href="https://gubo-00-99.github.io/java/201007_1_2.html" target="_blank">예제Ex3_2</a></li>
-   <li><a href="https://gubo-00-99.github.io/java/201007_2_1.html" target="_blank">학점 계산</a></li>
-   <li><a href="https://gubo-00-99.github.io/java/201007_2_2.html" target="_blank">문자열 검색</a></li>
-   <li><a href="https://gubo-00-99.github.io/java/201007_2_ex1.html" target="_blank">예제Ex3_3</a></li>
-   <li><a href="https://gubo-00-99.github.io/java/201007_2_ex2.html" target="_blank">예제Ex3_4</a></li>
-   <li><a href="https://gubo-00-99.github.io/java/201008_3_1.html" target="_blank">조건문 if</a></li>
-   <li><a href="https://gubo-00-99.github.io/java/201008_3_2.html" target="_blank">조건문 if+함수</a></li>
-   <li><a href="https://gubo-00-99.github.io/java/201008_3_3.html" target="_blank">조건문 switch</a></li>
-   <li><a href="https://gubo-00-99.github.io/java/201008_4_1.html" target="_blank">반복문 while(1부터 100까지의 합)</a></li>
-   <li><a href="https://gubo-00-99.github.io/java/201008_4_2.html" target="_blank">반복문 do~while(1부터 100까지의 합)</a></li>
-  </ol>
-  <li id="weeek06">6주
-  <ol type="1">
-   <li><a href="https://gubo-00-99.github.io/java/201014_1.html" target="_blank">for 반복문(1부터 100까지의 합)+다른 반복문과의 비교</a></li>
-   <li><a href="https://gubo-00-99.github.io/java/201014_2_1.html" target="_blank">무한 반복 멈추기</a></li>
-   <li><a href="https://gubo-00-99.github.io/java/201014_2_2.html" target="_blank">삼각형 출력(for문)</a></li>
-   <li><a href="https://gubo-00-99.github.io/java/201014_2_3.html" target="_blank">원 출력(for문)</a></li>
-   <li><a href="https://gubo-00-99.github.io/java/201028_3_1.html" target="_blank">Ex5_1</a></li>
-   <li><a href="https://gubo-00-99.github.io/java/201028_3_2.html" target="_blank">Ex5_2</a></li>
-   <li><a href="https://gubo-00-99.github.io/java/201028_3_3.html" target="_blank">Ex5_3</a></li>
-   <li><a href="https://gubo-00-99.github.io/java/201028_3_4.html" target="_blank">Ex5_4</a></li>
-   <li><a href="https://gubo-00-99.github.io/java/201028_3_5.html" target="_blank">6주차 3번째 영상 과제(소수찾기)</a></li>
-   <li><a href="https://gubo-00-99.github.io/java/201028_4_1.html" target="_blank">Ex6_1</a></li>
-   <li><a href="https://gubo-00-99.github.io/java/201028_4_2.html" target="_blank">Ex6_2</a></li>
-   <li><a href="https://gubo-00-99.github.io/java/201028_4_3.html" target="_blank">Ex6_3</a></li>
-   <li><a href="https://gubo-00-99.github.io/java/201028_4_4.html" target="_blank">6주차 4번째 영상 과제</a></li>
-  </ol>
-  <li id="weeek07">7주
-  <ol type="1">
-   <li><a href="https://gubo-00-99.github.io/java/201029_1.html" target="_blank">사각형 면적</a></li>
-   <li><a href="https://gubo-00-99.github.io/java/201029_2.html" target="_blank">삼각형 면적</a></li>
-   <li><a href="https://gubo-00-99.github.io/java/201029_3.html" target="_blank">사각형 면적(함수이용)</a></li>
-   <li><a href="https://gubo-00-99.github.io/java/201029_4.html" target="_blank">삼각형 면적(함수이용)</a></li>
-   <li><a href="https://gubo-00-99.github.io/java/201029_5.html" target="_blank">사각형과 삼각형의 면적(함수이용)</a></li>
-   <li><a href="https://gubo-00-99.github.io/java/201029_6.html" target="_blank">두 점간 직선거리 예제 함수화</a></li>
-   <li><a href="https://gubo-00-99.github.io/java/201029_7.html" target="_blank">두 수 더하기</a></li>
-   <li><a href="https://gubo-00-99.github.io/java/201029_8.html" target="_blank">두 수 함수이용해서 더하기</a></li>
-   <li><a href="https://gubo-00-99.github.io/java/201029_9.html" target="_blank">두 수 빼기</a></li>
-   <li><a href="https://gubo-00-99.github.io/java/201029_10.html" target="_blank">두 수 함수이용해서 빼기</a></li>
-   <li><a href="https://gubo-00-99.github.io/java/201029_11.html" target="_blank">두 수 곱하기</a></li>
-   <li><a href="https://gubo-00-99.github.io/java/201029_12.html" target="_blank">두 수 함수이용해서 곱하기</a></li>
-   <li><a href="https://gubo-00-99.github.io/java/201029_13.html" target="_blank">두 수 나누기</a></li>
-   <li><a href="https://gubo-00-99.github.io/java/201029_14.html" target="_blank">두 수 함수이용해서 나누기</a></li>
-  </ol>
+ a:link{color:blue; text-decoration:none;} a:visited{color:purple; text-decoration:none;}
+ a:hover{text-decoration:inderline;}a:active{color:red; text-decoration:none;}
+ </style></head>
+<body>
+<h1>유지훈 과제 리스트</h3>
+ <ul><hr/>
+ <li> 2주차 </li>
+<ol>
+ <li><a href=jihunyu524.github.io/JAVA/Week1/week1-2.html>실습과제</a>
+ <li><a href=jihunyu524.github.io/JAVA/Week1/week1-3.html> 변학도출력</a>  
+</ol><hr/>
+<li> 3주차 </li>                                                             
+<ol>
+  <li><a href="https://jihunyu524.github.io/JAVA/week3/week3-5.html>" target="_blank"> 변수</a></li>                                                  
+  <li><a href=https://jihunyu524.github.io/JAVA/week3/week3-7.html> (변수 초기화 에러 발생 표시)</a>   
+  <li><a href=https://jihunyu524.github.io/JAVA/week3/week3-8.html> (학생정보 변수 예시)</a>   
+  <li><a href=https://jihunyu524.github.io/JAVA/Week1/week1-1.html> (변수로 원의 둘레 구하기)</a>    
+</ol><hr/>
+ <li> 4주차 </li>                                                             
+<ol>
+  <li><a href=koa1020.github.io/Ex2.html> (시간 나누기)</a>  
+  <li><a href=koa1020.github.io/Ex2_1.html> (나머지 구하기1)</a> 
+  <li><a href=koa1020.github.io/Ex2_2.html> (나머지 구하기2)</a> 
+  <li><a href=koa1020.github.io/Ex2_3.html> (Ex2_3.jpg)</a>  
+  <li><a href=koa1020.github.io/Ex2_4.html> (Ex2_4.jpg)</a> 
+  <li><a href=koa1020.github.io/Ex2_5.html> (Ex2_5.jpg)</a> 
+  <li><a href=koa1020.github.io/Ex2_6.html> (Ex2_6.jpg)</a>  
+  <li><a href=koa1020.github.io/Ex2_7.html> (Ex2_7.jpg)</a> 
+  <li><a href=koa1020.github.io/Ex2_8.html> (Ex2_8.jpg)</a> 
+  <li><a href=koa1020.github.io/Ex2_9.html> (Ex2_9.jpg)</a> 
+</ol><hr/>
+<li> 5주차 </li>                                                             
+<ol>
+  <li><a href=koa1020.github.io/Ex3_2.html> (학점1)</a>  
+  <li><a href=koa1020.github.io/Ex3_3.html> (학점2)</a> 
+  <li><a href=koa1020.github.io/Ex3_4.html> (Yes java.)</a> 
+  <li><a href=koa1020.github.io/Ex3_5.html> (성별 구하기1)</a>  
+  <li><a href=koa1020.github.io/Ex3_6.html> (성별 구하기2)</a> 
+  <li><a href=koa1020.github.io/Ex3_7.html> (1+100 까지의 합1)</a> 
+  <li><a href=koa1020.github.io/Ex3_8.html> (1+100 까지의 합2)</a> 
+</ol><hr/>
+  <li> 6주차 </li>                                                             
+<ol>
+  <li><a href=koa1020.github.io/Ex4_1.html> (i값의 합구하기)</a>  
+  <li><a href=koa1020.github.io/Ex4_2.html> (1+100까지의합구하기)</a> 
+  <li><a href=koa1020.github.io/Ex4_3.html> (1~10까지 세로로 구하기)</a> 
+  <li><a href=koa1020.github.io/Ex4_4.html> (역삼각형 모양)</a> 
+  <li><a href=koa1020.github.io/Ex4_5.html> (피라미드 모양)</a> 
+</ol><hr/>
+  <li> 7주차 </li>                                                             
+<ol>
+  <li><a href=koa1020.github.io/Ex6_1.html> (직사각형 면적구하기)</a>  
+  <li><a href=koa1020.github.io/Ex6_2.html> (삼각형 면적구하기)</a> 
+  <li><a href=koa1020.github.io/Ex6_3.html> (같은 방식의 삼각형 면적구하기)</a> 
+  <li><a href=koa1020.github.io/Ex6_4.html> (삼각형의 면적구하기)</a> 
+  <li><a href=koa1020.github.io/Ex6_5.html> (Ex3_5.jpg)</a>  
+  <li><a href=koa1020.github.io/Ex6_6.html> (Ex3_6.jpg)</a> 
+  <li><a href=koa1020.github.io/Ex6_7.html> (Ex3_7.jpg)</a> 
+  <li><a href=koa1020.github.io/Ex6_8.html> (Ex3_8.jpg)</a>
+  <li><a href=koa1020.github.io/Ex6_9.html> (Ex3_7.jpg)</a> 
+  <li><a href=koa1020.github.io/Ex6_10.html> (Ex3_8.jpg)</a>
+  <li><a href=koa1020.github.io/Ex7_1.html> (클래스 정의 및 객체사용 예시1)</a>  
+  <li><a href=koa1020.github.io/Ex7_2.html> (Ex7_1의 동일한 절차 프로그램 예시)</a> 
+  <li><a href=koa1020.github.io/Ex7_3.html> (클래스 정의 및 객체사용 예시2)</a>                                                                  
+</ol><hr/>
