--- a/JAVA/index.html
+++ b/JAVA/index.html
@@ -12,28 +12,28 @@
  <ul><hr/>
  <li> 2주차 </li>
 <ol>
- <li><a href=jihunyu524.github.io/JAVA/Week1/week1-2.html>실습과제</a>
- <li><a href=jihunyu524.github.io/JAVA/Week1/week1-3.html> 변학도출력</a>  
+ <li><a href=https://jihunyu524.github.io/JAVA/Week1/week1-2.html>실습과제</a>
+ <li><a href=https://jihunyu524.github.io/JAVA/Week1/week1-3.html> 변학도출력</a>  
 </ol><hr/>
 <li> 3주차 </li>                                                             
 <ol>
-  <li><a href="https://jihunyu524.github.io/JAVA/week3/week3-5.html>" target="_blank"> 변수</a></li>                                                  
+  <li><a href=https://jihunyu524.github.io/JAVA/week3/week3-5.html> 변수</a>                                                
   <li><a href=https://jihunyu524.github.io/JAVA/week3/week3-7.html> (변수 초기화 에러 발생 표시)</a>   
   <li><a href=https://jihunyu524.github.io/JAVA/week3/week3-8.html> (학생정보 변수 예시)</a>   
   <li><a href=https://jihunyu524.github.io/JAVA/Week1/week1-1.html> (변수로 원의 둘레 구하기)</a>    
 </ol><hr/>
  <li> 4주차 </li>                                                             
 <ol>
-  <li><a href=koa1020.github.io/Ex2.html> (시간 나누기)</a>  
-  <li><a href=koa1020.github.io/Ex2_1.html> (나머지 구하기1)</a> 
-  <li><a href=koa1020.github.io/Ex2_2.html> (나머지 구하기2)</a> 
-  <li><a href=koa1020.github.io/Ex2_3.html> (Ex2_3.jpg)</a>  
-  <li><a href=koa1020.github.io/Ex2_4.html> (Ex2_4.jpg)</a> 
-  <li><a href=koa1020.github.io/Ex2_5.html> (Ex2_5.jpg)</a> 
-  <li><a href=koa1020.github.io/Ex2_6.html> (Ex2_6.jpg)</a>  
-  <li><a href=koa1020.github.io/Ex2_7.html> (Ex2_7.jpg)</a> 
-  <li><a href=koa1020.github.io/Ex2_8.html> (Ex2_8.jpg)</a> 
-  <li><a href=koa1020.github.io/Ex2_9.html> (Ex2_9.jpg)</a> 
+  <li><a href=https://jihunyu524.github.io/JAVA/week4/week4-7.html> (시간 나누기)</a>  
+  <li><a href=https://jihunyu524.github.io/JAVA/week4/week4-5.html> (나머지 구하기1)</a> 
+  <li><a href=https://jihunyu524.github.io/JAVA/week4/week4-4.html> (나머지 구하기2)</a> 
+  <li><a href=https://jihunyu524.github.io/JAVA/week4/week4-8.html> (증감 연산자)</a>  
+  <li><a href=https://jihunyu524.github.io/JAVA/week4/week4-9.html> (나머지 구하기%)</a> 
+  <li><a href=https://jihunyu524.github.io/JAVA/week4/week4-13.html> (불린 변수 사용)</a> 
+  <li><a href=https://jihunyu524.github.io/JAVA/week4/week4-10.html> (비교 연산자)</a>  
+  <li><a href=https://jihunyu524.github.io/JAVA/week4/week4-11.html> (삼항 연산자)</a> 
+  <li><a href=https://jihunyu524.github.io/JAVA/week4/week4-12.html> (Math. pow())</a> 
+  <li><a href=https://jihunyu524.github.io/JAVA/week4/week4-15.html> (논리 결과값 출력)</a> 
 </ol><hr/>
 <li> 5주차 </li>                                                             
 <ol>
