--- a/JAVA/index.html
+++ b/JAVA/index.html
@@ -37,35 +37,52 @@
 </ol><hr/>
 <li> 5주차 </li>                                                             
 <ol>
-  <li><a href=koa1020.github.io/Ex3_2.html> (학점1)</a>  
-  <li><a href=koa1020.github.io/Ex3_3.html> (학점2)</a> 
-  <li><a href=koa1020.github.io/Ex3_4.html> (Yes java.)</a> 
-  <li><a href=koa1020.github.io/Ex3_5.html> (성별 구하기1)</a>  
-  <li><a href=koa1020.github.io/Ex3_6.html> (성별 구하기2)</a> 
-  <li><a href=koa1020.github.io/Ex3_7.html> (1+100 까지의 합1)</a> 
-  <li><a href=koa1020.github.io/Ex3_8.html> (1+100 까지의 합2)</a> 
+  <li><a href=https://jihunyu524.github.io/JAVA/week5/week5-1.html> (예제Ex3_1)</a>  
+  <li><a href=https://jihunyu524.github.io/JAVA/week5/week5-2.html> (예제Ex3_2)</a> 
+  <li><a href=https://jihunyu524.github.io/JAVA/week5/week5-10.html> (학점 과제)</a> 
+  <li><a href=https://jihunyu524.github.io/JAVA/week5/week5-11.html> (문자열 검색)</a>  
+  <li><a href=https://jihunyu524.github.io/JAVA/week5/week5-3.html> (예제Ex3_3)</a> 
+  <li><a href=khttps://jihunyu524.github.io/JAVA/week5/week5-4.html> (예제Ex3_4)</a> 
+  <li><a href=https://jihunyu524.github.io/JAVA/week5/week5-12.html> (조건문 if)</a> 
+  <li><a href=https://jihunyu524.github.io/JAVA/week5/week5-13.html> (조건문 if+switch)</a> 
+  <li><a href=https://jihunyu524.github.io/JAVA/week5/week5-14.html> (1부터 100까지 while)</a>  
+  <li><a href=https://jihunyu524.github.io/JAVA/week5/week5-15.html> (1부터 100까지 do while)</a>                                                                 
 </ol><hr/>
   <li> 6주차 </li>                                                             
 <ol>
-  <li><a href=koa1020.github.io/Ex4_1.html> (i값의 합구하기)</a>  
-  <li><a href=koa1020.github.io/Ex4_2.html> (1+100까지의합구하기)</a> 
-  <li><a href=koa1020.github.io/Ex4_3.html> (1~10까지 세로로 구하기)</a> 
-  <li><a href=koa1020.github.io/Ex4_4.html> (역삼각형 모양)</a> 
-  <li><a href=koa1020.github.io/Ex4_5.html> (피라미드 모양)</a> 
+  <li><a href=https://jihunyu524.github.io/JAVA/week6/week6-1.html> (예제Ex4_3)</a>  
+  <li><a href=https://jihunyu524.github.io/JAVA/week6/week6-2.html> (예제Ex4_4)</a> 
+  <li><a href=https://jihunyu524.github.io/JAVA/week6/week6-3.html> (예제Ex4_5)</a> 
+  <li><a href=https://jihunyu524.github.io/JAVA/week6/week6-4.html> (예제Ex5_1)</a> 
+  <li><a href=https://jihunyu524.github.io/JAVA/week6/week6-5.html> (예제Ex5_2)</a> 
+  <li><a href=https://jihunyu524.github.io/JAVA/week6/week6-6.html> (예제Ex5_3)</a>   
+  <li><a href=https://jihunyu524.github.io/JAVA/week6/week6-7.html> (예제Ex5_4)</a>
+  <li><a href=https://jihunyu524.github.io/JAVA/week6/week6-8.html> (예제Ex6_1)</a>                                                                
+  <li><a href=https://jihunyu524.github.io/JAVA/week6/week6-9.html> (예제Ex6_2)</a> 
+  <li><a href=https://jihunyu524.github.io/JAVA/week6/week6-10.html> (예제Ex6_3)</a>
+  <li><a href=https://jihunyu524.github.io/JAVA/week6/week6-11.html> (for반목분 1부터 100까지)</a>
+  <li><a href=https://jihunyu524.github.io/JAVA/week6/week6-12.html> (무한 반복 멈추기)</a> 
+  <li><a href=https://jihunyu524.github.io/JAVA/week6/week6-13.html> (삼각형 출력)</a>  
+  <li><a href=https://jihunyu524.github.io/JAVA/week6/week6-14.html> (원 출력)</a>
+  <li><a href=https://jihunyu524.github.io/JAVA/week6/week6-15.html> (소수 찾기)</a>
+  <li><a href=https://jihunyu524.github.io/JAVA/week6/week6-16.html> (String이용)</a>                                                                
 </ol><hr/>
   <li> 7주차 </li>                                                             
 <ol>
-  <li><a href=koa1020.github.io/Ex6_1.html> (직사각형 면적구하기)</a>  
-  <li><a href=koa1020.github.io/Ex6_2.html> (삼각형 면적구하기)</a> 
-  <li><a href=koa1020.github.io/Ex6_3.html> (같은 방식의 삼각형 면적구하기)</a> 
-  <li><a href=koa1020.github.io/Ex6_4.html> (삼각형의 면적구하기)</a> 
-  <li><a href=koa1020.github.io/Ex6_5.html> (Ex3_5.jpg)</a>  
-  <li><a href=koa1020.github.io/Ex6_6.html> (Ex3_6.jpg)</a> 
-  <li><a href=koa1020.github.io/Ex6_7.html> (Ex3_7.jpg)</a> 
-  <li><a href=koa1020.github.io/Ex6_8.html> (Ex3_8.jpg)</a>
-  <li><a href=koa1020.github.io/Ex6_9.html> (Ex3_7.jpg)</a> 
-  <li><a href=koa1020.github.io/Ex6_10.html> (Ex3_8.jpg)</a>
-  <li><a href=koa1020.github.io/Ex7_1.html> (클래스 정의 및 객체사용 예시1)</a>  
-  <li><a href=koa1020.github.io/Ex7_2.html> (Ex7_1의 동일한 절차 프로그램 예시)</a> 
-  <li><a href=koa1020.github.io/Ex7_3.html> (클래스 정의 및 객체사용 예시2)</a>                                                                  
+  <li><a href=> (직사각형 면적구하기)</a>  
+  <li><a href=https://jihunyu524.github.io/JAVA/week7/week7-1.html> (예제Ex6_4)</a> 
+  <li><a href=https://jihunyu524.github.io/JAVA/week7/week7-2.html> (예제Ex6_5)</a> 
+  <li><a href=https://jihunyu524.github.io/JAVA/week7/week7-3.html> (예제Ex6_6)</a> 
+  <li><a href=https://jihunyu524.github.io/JAVA/week7/week7-4.html> (예제Ex6_7)</a>  
+  <li><a href=https://jihunyu524.github.io/JAVA/week7/week7-5.html> (예제Ex6_8)</a> 
+  <li><a href=https://jihunyu524.github.io/JAVA/week7/week7-6.html> (예제Ex6_9)</a>
+  <li><a href=https://jihunyu524.github.io/JAVA/week7/week7-7.html> (예제Ex6_10)</a>                                                                
+  <li><a href=https://jihunyu524.github.io/JAVA/week7/week7-8.html> (예제Ex6_11)</a>
+  <li><a href=https://jihunyu524.github.io/JAVA/week7/week7-9.html> (예제Ex6_12)</a> 
+  <li><a href=https://jihunyu524.github.io/JAVA/week7/week7-10.html> (예제Ex6_13)</a>
+  <li><a href=https://jihunyu524.github.io/JAVA/week7/week7-11.html> (예제Ex6_14)</a>  
+  <li><a href=https://jihunyu524.github.io/JAVA/week7/week7-12.html> (예제Ex6_15)</a> 
+  <li><a href=https://jihunyu524.github.io/JAVA/week7/week7-13.html> (예제Ex6_16)</a> 
+  <li><a href=https://jihunyu524.github.io/JAVA/week7/week7-14.html> (예제Ex7_1)</a>  
+  <li><a href=https://jihunyu524.github.io/JAVA/week7/week7-15.html> (예제Ex7_2)</a>                                                                
 </ol><hr/>
