--- a/JAVA/index.html
+++ b/JAVA/index.html
@@ -83,5 +83,9 @@
   <li><a href=https://jihunyu524.github.io/JAVA/week7/week7-12.html> (예제Ex6_15)</a> 
   <li><a href=https://jihunyu524.github.io/JAVA/week7/week7-13.html> (예제Ex6_16)</a> 
   <li><a href=https://jihunyu524.github.io/JAVA/week7/week7-14.html> (예제Ex7_1)</a>  
-  <li><a href=https://jihunyu524.github.io/JAVA/week7/week7-15.html> (예제Ex7_2)</a>                                                                
+  <li><a href=https://jihunyu524.github.io/JAVA/week7/week7-15.html> (예제Ex7_2)</a> 
+  <li><a href=https://jihunyu524.github.io/JAVA/week7/week7-15.html> (야옹이)</a>                                                                
 </ol><hr/>
+  <li> 9주차 </li>                                                             
+<ol>    
+                                                                  
