--- a/JAVA/week8/week8-1.html
+++ b/JAVA/week8/week8-1.html
@@ -6,8 +6,8 @@
 <body>
   <h2>  </h2><br/>
   <br/> 소스코드<br/>
-  <img src="6-11 소스.png" width=70% border=0 usemap="#area">
+  <img src="7-11.png" width=70% border=0 usemap="#area">
  <br/><br/> 결과화면<br/>
-  <img src="6-11 결과.png" width=80% border=0 usemap="#area">
+  <img src="7-11.png" width=80% border=0 usemap="#area">
 
 </body></html>
