--- a/JAVA/index.html
+++ b/JAVA/index.html
@@ -88,4 +88,20 @@
 </ol><hr/>
   <li> 9주차 </li>                                                             
 <ol>    
+ <li><a href=https://jihunyu524.github.io/JAVA/week8/week8-1.html> (이름과 학번_함수)</a>                                                                   
+ <li><a href=https://jihunyu524.github.io/JAVA/week8/week8-2.html> (두점거리 객체)</a>
+ <li><a href=https://jihunyu524.github.io/JAVA/week8/week8-3.html> (두점거리 자바빈)</a>   
+ <li><a href=https://jihunyu524.github.io/JAVA/week8/week8-4.html> (더하기 객체)</a>                                                                  
+ <li><a href=https://jihunyu524.github.io/JAVA/week8/week8-5.html> (더하기 자바빈)</a>                                                                 
+ <li><a href=https://jihunyu524.github.io/JAVA/week8/week8-6.html> (더하기 절차)</a>                                                                  
+ <li><a href=https://jihunyu524.github.io/JAVA/week8/week8-7.html> (더하기 함수)</a>                                                                  
+ <li><a href=https://jihunyu524.github.io/JAVA/week8/week8-8.html> (사각형의 넓이 구하기_절차)</a>                                                                  
+ <li><a href=https://jihunyu524.github.io/JAVA/week8/week8-9.html> (사각형의 넓이 구하기_함수)</a>                                                                  
+ <li><a href=https://jihunyu524.github.io/JAVA/week8/week8-10.html> (사각형의 넓이 구하기_객체)</a>                                                                  
+ <li><a href=https://jihunyu524.github.io/JAVA/week8/week8-11.html> (사각형의 넓이 구하기_자바빈)</a>                                                                  
+ <li><a href=https://jihunyu524.github.io/JAVA/week8/week8-12.html> (삼각형의 넓이 구하기_절차)</a>                                                                  
+ <li><a href=https://jihunyu524.github.io/JAVA/week8/week8-13.html> (삼각형의 넓이 구하기_함수)</a>                                                                  
+ <li><a href=https://jihunyu524.github.io/JAVA/week8/week8-14.html> (삼각형의 넓이 구하기_객체)</a>                                                                
+ <li><a href=https://jihunyu524.github.io/JAVA/week8/week8-15.html> (삼각형의 넓이 구하기_자바빈)</a>                                                                  
+                                                                  
                                                                   
