--- a/JAVA/index.html
+++ b/JAVA/index.html
@@ -102,6 +102,7 @@
  <li><a href=https://jihunyu524.github.io/JAVA/week8/week8-12.html> (삼각형의 넓이 구하기_절차)</a>                                                                  
  <li><a href=https://jihunyu524.github.io/JAVA/week8/week8-13.html> (삼각형의 넓이 구하기_함수)</a>                                                                  
  <li><a href=https://jihunyu524.github.io/JAVA/week8/week8-14.html> (삼각형의 넓이 구하기_객체)</a>                                                                
- <li><a href=https://jihunyu524.github.io/JAVA/week8/week8-15.html> (삼각형의 넓이 구하기_자바빈)</a>                                                                  
+ <li><a href=https://jihunyu524.github.io/JAVA/week8/week8-15.html> (삼각형의 넓이 구하기_자바빈)</a>   
+ <li><a href=https://jihunyu524.github.io/JAVA/week8/week8-16.html> (점수 합계 출력)</a>                                                                 
                                                                   
                                                                   
