--- a/JAVA/index.html
+++ b/JAVA/index.html
@@ -109,4 +109,5 @@
 <ol>
 <li><a href=https://jihunyu524.github.io/JAVA/week10/week10-1.html> (상속 야옹이)</a>                                                                  
 <li><a href=https://jihunyu524.github.io/JAVA/week10/week10-2.html> (상속 나무오르기)</a>                                                                  
-<li><a href=https://jihunyu524.github.io/JAVA/week10/week10-3.html> (오버라이딩)</a>
+<li><a href=https://jihunyu524.github.io/JAVA/week10/week10-3.html> (오버라이딩)</a
+<li><a href=https://jihunyu524.github.io/JAVA/week10/week10-4.html> (오버라이딩2)</a>
