--- a/JAVA/index.html
+++ b/JAVA/index.html
@@ -115,3 +115,4 @@
    <li> 11주차 </li>   
 <ol>
 <li><a href=https://jihunyu524.github.io/JAVA/week11/week11-1.html> (소나무)</a>                                                                  
+<li><a href=https://jihunyu524.github.io/JAVA/week11/week11-2.html> (상속-)</a>
