--- a/JAVA/index.html
+++ b/JAVA/index.html
@@ -118,3 +118,4 @@
 <li><a href=https://jihunyu524.github.io/JAVA/week11/week11-2.html> (상속-음료)</a>
 <li><a href=https://jihunyu524.github.io/JAVA/week11/week11-3.html> (상속-알콜추가)</a>
 <li><a href=https://jihunyu524.github.io/JAVA/week11/week11-4.html> (static 변수사용)</a>
+<li><a href=https://jihunyu524.github.io/JAVA/week11/week11-5.html> (static 변수사용 count변경)</a>
