--- a/JAVA/index.html
+++ b/JAVA/index.html
@@ -119,3 +119,6 @@
 <li><a href=https://jihunyu524.github.io/JAVA/week11/week11-3.html> (상속-알콜추가)</a>
 <li><a href=https://jihunyu524.github.io/JAVA/week11/week11-4.html> (static 변수사용)</a>
 <li><a href=https://jihunyu524.github.io/JAVA/week11/week11-5.html> (static 변수사용 count변경)</a>
+<li><a href=https://jihunyu524.github.io/JAVA/week11/week11-6.html> (동일메모리 사용)</a>
+<li><a href=https://jihunyu524.github.io/JAVA/week11/week11-7.html> (동일메모리 사용2)</a>
+<li><a href=https://jihunyu524.github.io/JAVA/week11/week11-8.html> (추상화 클래스 )</a>
