--- a/JAVA/index.html
+++ b/JAVA/index.html
@@ -123,4 +123,5 @@
 <li><a href=https://jihunyu524.github.io/JAVA/week11/week11-7.html> (동일메모리 사용2)</a>
 <li><a href=https://jihunyu524.github.io/JAVA/week11/week11-8.html> (추상화 클래스 )</a>
 <li><a href=https://jihunyu524.github.io/JAVA/week11/week11-9.html> (인터페이스 구현 (한글))</a>
-<li><a href=https://jihunyu524.github.io/JAVA/week11/week11-10.html> (인터페이스 구현 (한글,) )</a>                                                                  
+<li><a href=https://jihunyu524.github.io/JAVA/week11/week11-10.html> (인터페이스 구현 (한글,영어) )</a>                                                                  
+<li><a href=https://jihunyu524.github.io/JAVA/week11/week11-11.html> (인터페이스 구현 (한글2) )</a>
