--- a/JAVA/week13/week13-1.html
+++ b/JAVA/week13/week13-1.html
@@ -6,8 +6,8 @@
 <body>
   <h2>  </h2><br/>
   <br/> 소스코드<br/>
-  <img src="10-1소스.png" width=70% border=0 usemap="#area">
+  <img src="12-1.png" width=70% border=0 usemap="#area">
  <br/><br/> 결과화면<br/>
-  <img src="10-1결과.png" width=80% border=0 usemap="#area">
+  <img src="12-1.png" width=80% border=0 usemap="#area">
 
 </body></html>
