--- a/JAVA/index.html
+++ b/JAVA/index.html
@@ -126,4 +126,8 @@
 <li><a href=https://jihunyu524.github.io/JAVA/week11/week11-10.html> (인터페이스 구현 (한글,영어) )</a>                                                                  
 <li><a href=https://jihunyu524.github.io/JAVA/week11/week11-11.html> (인터페이스 구현 (한글2) )</a>
 <li><a href=https://jihunyu524.github.io/JAVA/week11/week11-12.html> (인터페이스 계산 )</a>
-
+</ol><hr/>
+   <li> 13주차 </li>   
+<ol>
+<li><a href=https://jihunyu524.github.io/JAVA/week13/week13-1.html> (콜렉션과 제너릭1 )</a>
+<li><a href=https://jihunyu524.github.io/JAVA/week13/week13-2.html> (콜렉션과 제너릭2 )</a>                                                                  
