--- a/JAVA/week13/week13-3.html
+++ b/JAVA/week13/week13-3.html
@@ -8,6 +8,6 @@
   <br/> 소스코드<br/>
   <img src="12-3소스.png" width=70% border=0 usemap="#area">
  <br/><br/> 결과화면<br/>
-  <img src="12-3.png" width=80% border=0 usemap="#area">
+  <img src="12-3결과.png" width=80% border=0 usemap="#area">
 
 </body></html>
