--- a/JAVA/index.html
+++ b/JAVA/index.html
@@ -131,3 +131,5 @@
 <ol>
 <li><a href=https://jihunyu524.github.io/JAVA/week13/week13-1.html> (콜렉션과 제너릭1 )</a>
 <li><a href=https://jihunyu524.github.io/JAVA/week13/week13-2.html> (콜렉션과 제너릭2 )</a>                                                                  
+<li><a href=https://jihunyu524.github.io/JAVA/week13/week13-3.html> (콜렉션과 제너릭3 )</a>
+<li><a href=https://jihunyu524.github.io/JAVA/week13/week13-4.html> (콜렉션과 제너릭4 )</a>                                                                  
